--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-AZURE_SEARCH_SERVICE_ENDPOINT=https://gurustorageacct.blob.core.windows.net
+
+AZURE_SEARCH_ENDPOINT=https://gurusearchai.search.windows.net
 AZURE_STORAGE_ACCOUNT_NAME=gurustorageacct
 AZURE_SUBSCRIPTION_ID=e15576d7-67e8-4ed2-acab-42c5885ea1fd
 AZURE_RESOURCE_GROUP=testpoc
+USE_STORAGE_MANAGED_IDENTITY=true
+USE_USER_ASSIGNED_IDENTITY=true
+USER_ASSIGNED_CLIENT_ID=6833750b-2598-4229-92a3-6d6d0df26e0f
 
 # Container names for each state
 AZURE_BLOB_CONTAINER_STATE1=guru-medicaid-ia-sit
@@ -18,3 +22,15 @@ STATE3_NAME=Ohio
 STATE4_NAME=Texas
 STATE5_NAME=Virginia
 STATE6_NAME=Washington
+
+
+
+# Azure Search Configuration
+
+
+# Search Configuration
+AZURE_SEARCH_INDEX_TOP_K=5
+
+# Optional: If using specific authentication methods
+# AZURE_TENANT_ID=your-tenant-id
+# AZURE_CLIENT_ID=your-client-id
